fixing css for mobile

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css">
   <script src="main.js"></script>
 </head>
-<body style="background-image: url('https://i.imgur.com/bSpwYHH.jpg'); background-size:1400px 1300px; background-repeat: no-repeat;">
+<body >
   <div style="display:flex">
     <div><h2>Welcome to Friends and Rudy League's Draft Order Lottery</h2></div>
     <div><button onclick="doit()">Draft order</button></div>
